--- a/styles.css
+++ b/styles.css
@@ -7,29 +7,30 @@ body {
   margin: 0;
   padding: 0;
   text-align: center;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Poppins', sans-serif;
   color: #222;
-  background: #f7f5f0;
+  background: #f4f4f4;
 }
 /* Link Styles */
 
 a {
   text-decoration: none;
-  color: #999;
+  color: #c0b283;
 }
 a:hover {
-  color: #6633ff;
+  color: #853847;
 }
 
 /* Section Styles */
 
 .main-nav {
   width: 100%;
-  background: black;
+  background: #373737;
   min-height: 30px;
   padding: 10px;
   position: fixed;
   text-align: center;
+  z-index: 999;
 }
 .nav {
   display: flex;
@@ -43,7 +44,7 @@ a:hover {
 .nav .name {
     display: block;
     margin-right: auto;
-    color: white;
+    color: #f4f4f4;
 }
 .nav li {
   padding: 5px 10px 10px 10px;
@@ -52,7 +53,7 @@ a:hover {
   transition: all .5s;
 }
 .nav a:hover {
-  color: white
+  color: #f4f4f4;
 }
 
 header {
@@ -71,15 +72,16 @@ header .profile-image {
   width: 150px;
   height: 150px;
   border-radius: 50%;
-  border: 3px solid white;
-  transition: all .5s;
+  border: 2px dashed #f4f4f4;
+  transition: all 0.3s;
 }
 header .profile-image:hover {
-  transform: scale(1.2) rotate(5deg);
+  transform: scale(1.15);
+  border-radius: 20px;
 }
 .tag {
-  background-color: #efefef;
-  color: black;
+  background-color: #f4f4f4;
+  color: #373737;
   padding: 10px;
   border-radius: 5px;
   display: table;
@@ -87,20 +89,20 @@ header .profile-image:hover {
 }
 .location {
   background-color: #222;
-  color: yellow;
+  color: #c0b283;
 }
 .card {
   margin: 30px;
   padding: 20px 40px 40px;
   max-width: 500px;
   text-align: left;
-  background: #fff;
-  border-bottom: 4px solid #ccc;
+  background: #f4f4f4;
+  border-bottom: 4px solid #f1f1f1;
   border-radius: 6px;
   transition: all .5s;
 }
 .card:hover {
-  border-color: #ff99ff;
+  border-color: #1abc9c;
 }
 
 ul.skills {
@@ -111,14 +113,14 @@ ul.skills {
 .skills li {
   border-radius: 6px;
   display: inline-block;
-  background: #ff9904;
-  color: white;
+  background: #853847;
+  color: #f4f4f4;
   padding: 5px 10px;
   margin: 2px;
 }
 
 .skills li:nth-child(odd) {
-  background: #0399ff;
+  background: #c0b283;
 }
 
 footer {
@@ -167,6 +169,18 @@ a.social:hover {
 .clearfix {
   clear: both;
 }
+.stretch {
+  width:100%;
+  min-height: 200px;
+  background-image: url('images/synthwave.png');
+  color: #efefef;
+}
+
+.stretch h3 {
+  padding-top: 40px;
+  font-weight: 600;
+  font-size: 1.7em;
+}
 
 /****************************
 GRID STYLES
@@ -177,13 +191,38 @@ GRID STYLES
   justify-content: center;
 }
 .cell {
-  width: 100%;
+  max-width: 83%;
   height: auto;
+  margin: 10px;
+  position: relative;
+  border: 1px solid #373737;
+  border-radius: 5px;
+}
+.celloverlay {
+  font-size: 2em;
+  font-weight: 900;
+  color: #f4f4f4;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(192,178,131,0.9);
+  cursor: pointer;
+  transition: all 100ms ease-in;
+}
+.celloverlay:hover {
+  opacity: 1;
 }
 .cell img {
   overflow: hidden;
   height: 100%;
   width: 100%;
+  margin-bottom: -8px;
 }
 
 /* Styles for larger screens */
