modify background for cards on home page

--- a/styles.css
+++ b/styles.css
@@ -96,7 +96,7 @@ header .profile-image:hover {
   padding: 20px 40px 40px;
   max-width: 500px;
   text-align: left;
-  background: #f4f4f4;
+  background-image: url('images/geometry2.png');
   border-bottom: 4px solid #f1f1f1;
   border-radius: 6px;
   transition: all .5s;
