significantly reduce project size by optimizing img

--- a/styles.css
+++ b/styles.css
@@ -172,7 +172,7 @@ a.social:hover {
 .stretch {
   width:100%;
   min-height: 200px;
-  background-image: url('images/synthwave.png');
+  background-image: url('images/synthwave.jpg');
   color: #efefef;
 }
 
